--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pro DJ House Studio</title>
+<title>Ultimate DJ Studio</title>
 <style>
 body{margin:0;background:#111;color:#eee;font-family:sans-serif;}
 #app{display:flex;flex-direction:column;align-items:center;padding:20px;}
-.panel{background:#222;border-radius:12px;padding:20px;margin:10px;width:95%;max-width:1200px;display:flex;flex-wrap:wrap;justify-content:center;}
+.panel{background:#222;border-radius:12px;padding:20px;margin:10px;width:95%;max-width:1400px;display:flex;flex-wrap:wrap;justify-content:center;}
 .knob-container{display:flex;flex-direction:column;align-items:center;margin:10px;}
 .knob{width:60px;height:60px;border-radius:50%;background:#333;border:4px solid #555;display:flex;align-items:center;justify-content:center;cursor:pointer;position:relative;}
 .knob:after{content:'';position:absolute;width:4px;height:20px;background:#eee;top:10px;left:50%;transform:translateX(-50%) rotate(0deg);transform-origin:bottom center;transition: transform 0.1s;border-radius:2px;}
@@ -15,7 +15,9 @@ body{margin:0;background:#111;color:#eee;font-family:sans-serif;}
 .pad{width:60px;height:60px;background:#444;margin:5px;border-radius:8px;display:flex;align-items:center;justify-content:center;cursor:pointer;user-select:none;}
 .pad.active{background:#ff5722;}
 #sequencer{display:flex;flex-wrap:wrap;justify-content:center;margin-top:10px;}
-#visualizer{width:100%;height:120px;background:#111;margin-top:20px;border:1px solid #333;border-radius:8px;}
+.step{width:30px;height:30px;margin:2px;border-radius:4px;background:#333;cursor:pointer;display:flex;align-items:center;justify-content:center;}
+.step.active{background:#ff5722;}
+#visualizer{width:100%;height:160px;background:#111;margin-top:20px;border:1px solid #333;border-radius:8px;}
 button{background:#333;border:none;color:#eee;padding:8px 12px;border-radius:6px;margin:4px;cursor:pointer;}
 button:hover{background:#555;}
 #recordBtn{background:#e53935;}
@@ -24,15 +26,12 @@ button:hover{background:#555;}
 </head>
 <body>
 <div id="app">
-<h1>Pro DJ House Studio</h1>
+<h1>Ultimate DJ Studio</h1>
 
-<!-- Controls -->
+<!-- Master Controls -->
 <div class="panel" id="controlsPanel">
   <div class="knob-container"><div class="knob" id="masterPitchKnob"></div><div class="label">Master Pitch</div></div>
-  <div class="knob-container"><div class="knob" id="voicePitchKnob"></div><div class="label">Voice Pitch</div></div>
-  <div class="knob-container"><div class="knob" id="voiceReverbKnob"></div><div class="label">Reverb</div></div>
-  <div class="knob-container"><div class="knob" id="voiceDelayKnob"></div><div class="label">Delay</div></div>
-  <div class="knob-container"><div class="knob" id="voiceDistKnob"></div><div class="label">Distortion</div></div>
+  <div class="knob-container"><div class="knob" id="masterVolumeKnob"></div><div class="label">Master Volume</div></div>
   <div style="display:flex;flex-direction:column;align-items:center;margin:10px;">
     <button id="recordBtn">Record Voice</button>
     <button id="downloadBtn">Download FX Voice</button>
@@ -42,7 +41,7 @@ button:hover{background:#555;}
 <!-- Pads -->
 <div class="panel" id="padPanel"></div>
 
-<!-- Sequencer -->
+<!-- Sequencer Grid -->
 <div class="panel" id="sequencer"></div>
 
 <!-- Visualizer -->
@@ -50,20 +49,19 @@ button:hover{background:#555;}
 </div>
 
 <script>
-// Audio setup
-const AudioContext = window.AudioContext || window.webkitAudioContext;
-const ctx = new AudioContext();
+// Audio Context
+const ctx = new (window.AudioContext || window.webkitAudioContext)();
 const masterGain = ctx.createGain();
 masterGain.gain.value=0.8;
 masterGain.connect(ctx.destination);
 let masterPlaybackRate = 1;
 
-// Knob utility
+// Knob Utility
 function createKnob(el, callback){
   let isDragging=false, angle=0;
-  el.addEventListener('mousedown',e=>{isDragging=true;});
-  window.addEventListener('mouseup',e=>{isDragging=false;});
-  window.addEventListener('mousemove',e=>{
+  el.addEventListener('mousedown',()=>{isDragging=true;});
+  window.addEventListener('mouseup',()=>{isDragging=false;});
+  window.addEventListener('mousemove',(e)=>{
     if(!isDragging) return;
     let rect=el.getBoundingClientRect();
     let y=e.clientY-rect.top-rect.height/2;
@@ -74,29 +72,116 @@ function createKnob(el, callback){
     callback((angle+135)/270);
   });
 }
-
-// Master pitch
 createKnob(document.getElementById('masterPitchKnob'), v=>{ masterPlaybackRate = 0.5+v*1.5; });
+createKnob(document.getElementById('masterVolumeKnob'), v=>{ masterGain.gain.value=v; });
 
-// Voice FX
-let voiceBuffer, voiceNodes={};
-function setupVoiceNodes(){
-  const pitchNode=ctx.createGain();
-  const reverb=ctx.createConvolver();
-  const delay=ctx.createDelay(); delay.delayTime.value=0.2;
-  const distortion=ctx.createWaveShaper(); distortion.curve=new Float32Array([0,1]);
-  pitchNode.connect(reverb); reverb.connect(delay); delay.connect(distortion); distortion.connect(masterGain);
-  voiceNodes={pitchNode,reverb,delay,distortion};
+// Pad Setup
+const padPanel=document.getElementById('padPanel');
+const pads=['Kick','Snare','HiHat','Clap','Piano','Trumpet','Synth'];
+const padFrequencies={Kick:100,Snare:200,HiHat:400,Clap:300,Piano:261.63,Trumpet:329.63,Synth:440};
+pads.forEach(name=>{
+  const pad=document.createElement('div'); pad.className='pad'; pad.textContent=name;
+  pad.onclick=()=>{ playPad(name); };
+  padPanel.appendChild(pad);
+});
+
+function playPad(name){
+  const osc=ctx.createOscillator();
+  const gain=ctx.createGain(); gain.gain.value=0.3;
+  osc.type=name==='Synth'?'sawtooth':name==='Trumpet'?'triangle':name==='Piano'?'sine':'square';
+  osc.frequency.value=padFrequencies[name];
+  osc.connect(gain); gain.connect(masterGain);
+  osc.start(); osc.stop(ctx.currentTime+0.2);
 }
-setupVoiceNodes();
 
-createKnob(document.getElementById('voicePitchKnob'),v=>{ voiceNodes.pitchNode.playbackRate = 0.5+v*1.5; });
-createKnob(document.getElementById('voiceReverbKnob'),v=>{/* optional wet/dry */});
-createKnob(document.getElementById('voiceDelayKnob'),v=>{ voiceNodes.delay.delayTime.value=v; });
-createKnob(document.getElementById('voiceDistKnob'),v=>{ voiceNodes.distortion.curve=new Float32Array([0,v,1]); });
+// Sequencer
+const sequencer=document.getElementById('sequencer');
+const trackNames=['Kick','Snare','HiHat','Clap','Piano','Trumpet','Synth'];
+let sequencerData={};
+trackNames.forEach(track=>{
+  sequencerData[track]=new Array(16).fill(false);
+  for(let i=0;i<16;i++){
+    const step=document.createElement('div');
+    step.className='step'; step.dataset.track=track; step.dataset.step=i;
+    step.onclick=()=>{
+      sequencerData[track][i]=!sequencerData[track][i];
+      step.classList.toggle('active',sequencerData[track][i]);
+    };
+    sequencer.appendChild(step);
+  }
+});
 
-// Voice recorder
-let mediaRecorder, recordedChunks=[];
+// Visualizer
+const canvas=document.getElementById('visualizer');
+const ctxVis=canvas.getContext('2d');
+canvas.width=canvas.clientWidth; canvas.height=canvas.clientHeight;
+const analyser=ctx.createAnalyser();
+masterGain.connect(analyser);
+const dataArray=new Uint8Array(analyser.frequencyBinCount);
+function drawVisualizer(){
+  requestAnimationFrame(drawVisualizer);
+  analyser.getByteFrequencyData(dataArray);
+  ctxVis.fillStyle='#111'; ctxVis.fillRect(0,0,canvas.width,canvas.height);
+  let barWidth=canvas.width/dataArray.length, x=0;
+  for(let i=0;i<dataArray.length;i++){
+    let barHeight=dataArray[i]/2;
+    ctxVis.fillStyle=`rgb(${barHeight+50},50,200)`;
+    ctxVis.fillRect(x,canvas.height-barHeight,barWidth,barHeight);
+    x+=barWidth+1;
+  }
+}
+drawVisualizer();
+</script>
+</body>
+</html>
+<script>
+// Sample buffers
+let sampleBuffers={};
+const sampleFiles={
+  Kick:'samples/kick.wav',
+  Snare:'samples/snare.wav',
+  HiHat:'samples/hihat.wav',
+  Clap:'samples/clap.wav',
+  Piano:'samples/piano.wav',
+  Trumpet:'samples/trumpet.wav',
+  Synth:'samples/synth.wav'
+};
+
+// Load samples
+async function loadSamples(){
+  for(const [name,url] of Object.entries(sampleFiles)){
+    const response=await fetch(url);
+    const arrayBuffer=await response.arrayBuffer();
+    sampleBuffers[name]=await ctx.decodeAudioData(arrayBuffer);
+  }
+}
+loadSamples();
+
+// Play sample
+function playSample(name){
+  if(!sampleBuffers[name]) return;
+  const source=ctx.createBufferSource();
+  source.buffer=sampleBuffers[name];
+  source.playbackRate.value=masterPlaybackRate;
+  const gainNode=ctx.createGain(); gainNode.gain.value=0.8;
+  source.connect(gainNode); gainNode.connect(masterGain);
+  source.start();
+}
+
+// FX Rack
+const filters={}, effects={};
+trackNames.forEach(track=>{
+  filters[track]=ctx.createBiquadFilter(); filters[track].type='lowpass'; filters[track].frequency.value=20000;
+  effects[track]=ctx.createGain(); effects[track].gain.value=1;
+  filters[track].connect(effects[track]); effects[track].connect(masterGain);
+});
+
+// Voice FX (reusing previous setup)
+let voiceBuffer, mediaRecorder, recordedChunks=[];
+const voiceNodes={pitchNode:ctx.createGain(),reverb:ctx.createConvolver(),delay:ctx.createDelay(),distortion:ctx.createWaveShaper()};
+voiceNodes.pitchNode.connect(voiceNodes.reverb); voiceNodes.reverb.connect(voiceNodes.delay); voiceNodes.delay.connect(voiceNodes.distortion); voiceNodes.distortion.connect(masterGain);
+
+// Voice Recorder Buttons
 document.getElementById('recordBtn').onclick=async ()=>{
   if(!mediaRecorder||mediaRecorder.state==='inactive'){
     const stream=await navigator.mediaDevices.getUserMedia({audio:true});
@@ -107,81 +192,162 @@ document.getElementById('recordBtn').onclick=async ()=>{
       const blob=new Blob(recordedChunks,{type:'audio/webm'});
       const arrayBuffer=await blob.arrayBuffer();
       voiceBuffer=await ctx.decodeAudioData(arrayBuffer);
-      playVoiceSample();
+      playVoice();
     };
     mediaRecorder.start();
     document.getElementById('recordBtn').textContent='Stop Recording';
   } else { mediaRecorder.stop(); document.getElementById('recordBtn').textContent='Record Voice'; }
 };
 
-function playVoiceSample(){
+function playVoice(){
   if(!voiceBuffer) return;
-  const source=ctx.createBufferSource();
-  source.buffer=voiceBuffer;
-  source.playbackRate.value = voiceNodes.pitchNode.playbackRate || 1;
-  source.connect(voiceNodes.pitchNode);
-  source.start();
-  const pad=document.createElement('div');
-  pad.className='pad active'; pad.textContent='Voice';
-  pad.onclick=()=>{ playVoiceSample(); };
-  document.getElementById('padPanel').appendChild(pad);
+  const source=ctx.createBufferSource(); source.buffer=voiceBuffer;
+  source.connect(voiceNodes.pitchNode); source.start();
 }
 
-// Download FX voice
-document.getElementById('downloadBtn').onclick=()=>{
-  if(!voiceBuffer) return;
-  const offlineCtx=new OfflineAudioContext(1,voiceBuffer.length,ctx.sampleRate);
-  const source=offlineCtx.createBufferSource();
-  source.buffer=voiceBuffer;
-  source.playbackRate.value=voiceNodes.pitchNode.playbackRate||1;
-  source.connect(offlineCtx.destination);
-  source.start();
-  offlineCtx.startRendering().then(renderedBuffer=>{
-    const wav=audioBufferToWav(renderedBuffer);
-    const blob=new Blob([new DataView(wav)],{type:'audio/wav'});
-    const url=URL.createObjectURL(blob);
-    const a=document.createElement('a'); a.href=url; a.download='voice_fx.wav'; a.click();
+// Sequencer Playback
+let currentStep=0;
+const bpm=120;
+function playSequencer(){
+  trackNames.forEach(track=>{
+    if(sequencerData[track][currentStep]){
+      playSample(track);
+    }
   });
+  currentStep=(currentStep+1)%16;
+  setTimeout(playSequencer, (60000/bpm)/4); // 16 steps
+}
+playSequencer();
+
+// Preset Patterns
+const presets={
+  JohnSummit:[['Kick',0,4,8,12],['Snare',4,12],['HiHat',2,6,10,14]],
+  BenBohmer:[['Kick',0,4,8,12],['HiHat',1,5,9,13],['Piano',0,4,8,12]],
+  Kygo:[['Kick',0,4,8,12],['Clap',4,12],['Synth',0,2,4,6,8,10,12,14]]
 };
 
-function audioBufferToWav(buffer){
-  let numOfChan=buffer.numberOfChannels,length=buffer.length*numOfChan*2+44,
-      bufferArray=new ArrayBuffer(length),view=new DataView(bufferArray),
-      channels=[],i,sample,offset=0,pos=0;
-  setUint32(0x46464952);setUint32(length-8);setUint32(0x45564157);setUint32(0x20746d66);
-  setUint32(16);setUint16(1);setUint16(numOfChan);setUint32(buffer.sampleRate);
-  setUint32(buffer.sampleRate*2*numOfChan);setUint16(numOfChan*2);setUint16(16);
-  setUint32(0x61746164);setUint32(length-pos-4);
-  for(i=0;i<numOfChan;i++) channels.push(buffer.getChannelData(i));
-  while(pos<length){for(i=0;i<numOfChan;i++){sample=Math.max(-1,Math.min(1,channels[i][offset]));sample=(0.5+sample*0.5)*65535;view.setUint16(pos,sample,true);pos+=2;}offset++;}
-  return bufferArray;
-  function setUint16(data){ view.setUint16(pos,data,true); pos+=2; }
-  function setUint32(data){ view.setUint32(pos,data,true); pos+=4; }
+function loadPreset(name){
+  if(!presets[name]) return;
+  trackNames.forEach(track=>sequencerData[track]=new Array(16).fill(false));
+  presets[name].forEach(p=>{
+    const [track,...steps]=p;
+    steps.forEach(s=>sequencerData[track][s]=true);
+  });
+  // Update UI
+  document.querySelectorAll('.step').forEach(step=>{
+    const t=step.dataset.track, i=parseInt(step.dataset.step);
+    step.classList.toggle('active',sequencerData[t][i]);
+  });
 }
 
-// Pads with samples
-const padPanel=document.getElementById('padPanel');
-const samples=['Kick','Snare','HiHat','Clap','Piano','Trumpet','Synth'];
-const sampleFreq={Kick:100,Snare:200,HiHat:400,Clap:300,Piano:261.63,Trumpet:329.63,Synth:440};
-samples.forEach(name=>{
-  const pad=document.createElement('div'); pad.className='pad'; pad.textContent=name;
-  pad.onclick=()=>{ playSample(name); };
-  padPanel.appendChild(pad);
-});
-function playSample(name){
-  const osc=ctx.createOscillator(); const gain=ctx.createGain(); gain.gain.value=0.3;
-  osc.type=name==='Synth'?'sawtooth':name==='Trumpet'?'triangle':name==='Piano'?'sine':'square';
-  osc.frequency.value=sampleFreq[name]||440;
-  osc.connect(gain); gain.connect(masterGain); osc.start(); osc.stop(ctx.currentTime+0.2);
-}
-
-// Visualizer
-const canvas=document.getElementById('visualizer'),ctxVis=canvas.getContext('2d');
-canvas.width=canvas.clientWidth; canvas.height=canvas.clientHeight;
-const analyser=ctx.createAnalyser(); masterGain.connect(analyser); const dataArray=new Uint8Array(analyser.frequencyBinCount);
-function draw(){ requestAnimationFrame(draw); analyser.getByteFrequencyData(dataArray); ctxVis.fillStyle='#111'; ctxVis.fillRect(0,0,canvas.width,canvas.height);
-let barWidth=canvas.width/dataArray.length,x=0; for(let i=0;i<dataArray.length;i++){ let barHeight=dataArray[i]/2; ctxVis.fillStyle=`rgb(${barHeight+50},50,200)`; ctxVis.fillRect(x,canvas.height-barHeight,barWidth,barHeight); x+=barWidth+1;}}
-draw();
+// Example: load John Summit preset by default
+loadPreset('JohnSummit');
 </script>
-</body>
-</html>
+<script>
+// Advanced FX Rack
+function createFXRack(track){
+  const filter = ctx.createBiquadFilter();
+  filter.type = 'lowpass';
+  filter.frequency.value = 20000;
+  
+  const delay = ctx.createDelay(); delay.delayTime.value = 0.25;
+  const reverb = ctx.createConvolver();
+  const distortion = ctx.createWaveShaper();
+  distortion.curve = new Float32Array([0,1]);
+  const gain = ctx.createGain(); gain.gain.value=0.8;
+  
+  filter.connect(delay); delay.connect(reverb); reverb.connect(distortion); distortion.connect(gain); gain.connect(masterGain);
+  
+  return {filter, delay, reverb, distortion, gain};
+}
+
+// Apply FX per track
+const trackFX = {};
+trackNames.forEach(track=>{ trackFX[track] = createFXRack(track); });
+
+// Randomization Engine
+function randomizeTrack(track,intensity=0.3){
+  sequencerData[track].forEach((_,i)=>{
+    sequencerData[track][i] = Math.random() < intensity;
+  });
+  // Update UI
+  document.querySelectorAll(`.step[data-track="${track}"]`).forEach(step=>{
+    const i = parseInt(step.dataset.step);
+    step.classList.toggle('active', sequencerData[track][i]);
+  });
+}
+
+// Randomize all tracks with intensity map
+function randomizeAll(intensityMap){
+  trackNames.forEach(track=>{
+    randomizeTrack(track, intensityMap[track] || 0.3);
+  });
+}
+
+// Preloaded DJ Presets
+const djPresets={
+  Fisher:[['Kick',0,4,8,12],['Snare',4,12],['HiHat',2,6,10,14],['Synth',0,3,6,9,12,15]],
+  DomDolla:[['Kick',0,4,8,12],['Clap',4,12],['HiHat',1,5,9,13],['Synth',0,2,4,6,8,10,12,14]],
+  BarryCantSwim:[['Kick',0,4,8,12],['Piano',0,4,8,12],['HiHat',2,6,10,14],['Trumpet',1,5,9,13]]
+};
+
+function loadDJPreset(name){
+  if(!djPresets[name]) return;
+  trackNames.forEach(track=>sequencerData[track]=new Array(16).fill(false));
+  djPresets[name].forEach(p=>{
+    const [track,...steps]=p;
+    steps.forEach(s=>sequencerData[track][s]=true);
+  });
+  // Update UI
+  document.querySelectorAll('.step').forEach(step=>{
+    const t=step.dataset.track, i=parseInt(step.dataset.step);
+    step.classList.toggle('active',sequencerData[t][i]);
+  });
+}
+
+// FX Controls UI
+trackNames.forEach(track=>{
+  const container = document.createElement('div'); container.className='knob-container';
+  const knob = document.createElement('div'); knob.className='knob';
+  const label = document.createElement('div'); label.className='label'; label.textContent=track+' Filter';
+  container.appendChild(knob); container.appendChild(label);
+  document.getElementById('controlsPanel').appendChild(container);
+  createKnob(knob,v=>{ trackFX[track].filter.frequency.value = 200 + v*20000; });
+});
+
+// Sequencer Step Highlight Animation
+function highlightStep(stepIndex){
+  document.querySelectorAll('.step').forEach(step=>{
+    step.style.borderColor='';
+    if(parseInt(step.dataset.step)===stepIndex){
+      step.style.borderColor='#ff5722';
+    }
+  });
+}
+
+// Updated Sequencer Playback Loop
+let stepCounter=0;
+function sequencerLoop(){
+  trackNames.forEach(track=>{
+    if(sequencerData[track][stepCounter]){
+      playSample(track);
+    }
+  });
+  highlightStep(stepCounter);
+  stepCounter = (stepCounter + 1) % 16;
+  setTimeout(sequencerLoop,(60000/bpm)/4);
+}
+sequencerLoop();
+
+// Preset Buttons UI
+['JohnSummit','BenBohmer','Kygo','Fisher','DomDolla','BarryCantSwim'].forEach(name=>{
+  const btn = document.createElement('button'); btn.textContent=name;
+  btn.onclick=()=>{ loadPreset(name); loadDJPreset(name); };
+  document.getElementById('controlsPanel').appendChild(btn);
+});
+
+// Optional Fullscreen toggle
+const fsBtn = document.createElement('button'); fsBtn.textContent='Fullscreen';
+fsBtn.onclick=()=>{ document.documentElement.requestFullscreen(); };
+document.getElementById('controlsPanel').appendChild(fsBtn);
+</script>
